[package]
name = "async-tweet-req"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["tokio1"] }
rand = "0.8.5"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0", features = ["derive"]}
